--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Realtime Restaurant Floorplan</title>
+  <title>KDH TABLE BOOKINGS</title>
 
   <!-- Socket.IO client -->
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
@@ -142,7 +142,7 @@
 </head>
 <body>
   <div class="topbar">
-    <div><strong>Realtime Floorplan</strong></div>
+    <div><strong>KDH TABLE BOOKINGS</strong></div>
     <div>
       <button id="logoutBtn" class="small">Logout</button>
     </div>
